--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <title>CircleCI</title>
   </head>
   <body>
+    <h2>Click the button below</h2>
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
   </body>
 </html>
