--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <div id="button_container"></div>
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="index.js"></script>
   </body>
 </html>
