New title and response

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>CircleCI</title>
+    <title>CircleCI - Vijay Pandian</title>
   </head>
   <body>
     <h2>Click the button below</h2>
